--- a/index.html
+++ b/index.html
@@ -1,14 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>face timestamp</title>
-    <script defer src="face-api.min.js"></script>
-    <script defer src="script.js"></script>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Face Detection with Timestamp and Name</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="face-api.min.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
 </head>
 <body>
-    <video id="video" width="640" height="480" autoplay muted></video>
+  <div class="container">
+    <!-- Video element -->
+    <video id="video" width="586" height="426" autoplay=""></video>
+    <!-- Name Input Field -->
+    <div class="input-container">
+      <input type="text" id="nameInput" placeholder="Enter name" />
+    </div> 
+
+    <!-- Button to Show Name with Timestamp -->
+    <div class="button-container">
+        <!-- <button id="notifyButton">Click Me</button> -->
+        <button id="captureButton">Capture Image</button>
+    </div>
+</div>
+
+    <!-- Area to display the notification -->
+    <div id="notification" class="notification"></div>
+
+    <!-- Display captured images and their timestamps -->
+    <div id="capturedData" class="captured-data"></div>
+
+  <script src="script.js"></script>
+  <script src="new.js"></script>
 </body>
-</html>   
+</html>
