--- a/index.html
+++ b/index.html
@@ -1,14 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>face timestamp</title>
-    <script defer src="face-api.min.js"></script>
-    <script defer src="script.js"></script>
-    <link rel="stylesheet" href="style.css">
+    <title>Face Recognition</title>
+    <link rel="stylesheet" href="style1.css">
 </head>
+
 <body>
-    <video id="video" width="640" height="480" autoplay muted></video>
+    <!-- Navbar -->
+    <header>
+        <nav>
+            <div class="container">
+                <h1>Face Recognition</h1>
+                <ul class="navbar">
+                    <!-- Sign Up Page -->
+                    <a href="signup.html"><button>Sign Up</button></a>
+                    <!-- Login Page -->
+                    <a href="login.html"><button>Login</button></a>
+
+                </ul>
+            </div>
+        </nav>
+    </header>
+
+    <!-- First Banner Section -->
+    <section class="banner">
+        <div class="container">
+            <h2>Face Recognition with Timestamp</h2>
+            <p>Accurately detect and timestamp faces in real-time for seamless identity verification and tracking.</p>
+            <img src="istockphoto-1139858627-1024x1024 @.jpg" alt="Face Recognition Banner">
+        </div>
+    </section>
+
+    <!-- Second Banner Section -->
+    <section class="how-to-use">
+        <div class="container">
+            <h2>How to Use</h2>
+            <div class="content">
+                <img src="pexels-julia-m-cameron-4144290 (2).jpg" alt="How to Use">
+                <div class="text">
+                    <p><strong>Step 1:</strong> Upload your image or enable your camera.</p>
+                    <p><strong>Step 2:</strong> Our system detects faces in real-time and timestamps each detection.</p>
+                    <p><strong>Step 3:</strong> Get secure and accurate results instantly.</p>
+                </div>
+            </div>
+            <h3>Who Can Use</h3>
+            <ul>
+                <li>Businesses for attendance tracking.</li>
+                <li>Security systems for identity verification.</li>
+                <li>Developers integrating face recognition into their apps.</li>
+            </ul>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <div class="container">
+            <p>&copy; 2025 Face Recognition Inc. All rights reserved.</p>
+        </div>
+    </footer>
+
 </body>
-</html>   
+
+</html>
